test/spec_vectors/f64/fail/module_4.wat
(module (func (result f64) (f64.min (i64.const 0) (f32.const 0))))